--- a/css/scss/_typography.scss
+++ b/css/scss/_typography.scss
@@ -55,6 +55,16 @@ body {
 	font-size: 40px;
 	color:black;
 }
+
+// question heading
+.question-body-heading {
+	text-align: center;
+	padding-top: 10px;
+	font-weight: 600;
+	font-size: 4vmin;
+	color:black;
+}
+
 // Body subheading
 .type-body-subheading {
 	text-align: center;
