--- a/css/main.css
+++ b/css/main.css
@@ -1104,12 +1104,11 @@ body {
 .question-body-heading {
   text-align: center;
   padding-top: 10px;
-  font-weight: 600;
   font-size: 4vmin;
   color: black;
 }
 
-/* line 69, scss/_typography.scss */
+/* line 68, scss/_typography.scss */
 .type-body-subheading {
   text-align: center;
   padding-top: 10px;
@@ -1117,7 +1116,7 @@ body {
   padding-bottom: 10px;
 }
 
-/* line 78, scss/_typography.scss */
+/* line 77, scss/_typography.scss */
 .startpage-welcome {
   color: white;
   text-align: center;
@@ -1127,18 +1126,18 @@ body {
   font-size: 1em;
 }
 
-/* line 87, scss/_typography.scss */
+/* line 86, scss/_typography.scss */
 .start-section-input {
   opacity: .8;
 }
-/* line 89, scss/_typography.scss */
+/* line 88, scss/_typography.scss */
 .start-section-input h3 {
   text-align: center;
   padding-top: 10px;
   font-weight: 800;
 }
 
-/* line 103, scss/_typography.scss */
+/* line 102, scss/_typography.scss */
 .lecturer-startpage-welcome {
   color: #000;
   text-align: center;
@@ -1148,12 +1147,12 @@ body {
   font-size: 1em;
 }
 
-/* line 112, scss/_typography.scss */
+/* line 111, scss/_typography.scss */
 #lecturer-start-username {
   font-weight: 600;
 }
 
-/* line 117, scss/_typography.scss */
+/* line 116, scss/_typography.scss */
 .type-lecture-mode h2, .type-prepare-mode h2 {
   color: white;
   font-size: 50px;
@@ -1162,14 +1161,14 @@ body {
   padding-top: calc(55vh - 173px);
   margin-bottom: 30px;
 }
-/* line 126, scss/_typography.scss */
+/* line 125, scss/_typography.scss */
 .type-lecture-mode h3, .type-prepare-mode h3 {
   color: white;
   font-weight: 300;
   text-align: center;
 }
 
-/* line 133, scss/_typography.scss */
+/* line 132, scss/_typography.scss */
 .typography-l-h3 {
   color: white;
   display: inline-block;
@@ -1177,7 +1176,7 @@ body {
   margin-top: 18px;
 }
 
-/* line 140, scss/_typography.scss */
+/* line 139, scss/_typography.scss */
 .type-body-url {
   font-size: 20px;
   text-align: center;
@@ -1185,7 +1184,7 @@ body {
   margin-top: 10px;
 }
 
-/* line 147, scss/_typography.scss */
+/* line 146, scss/_typography.scss */
 .type-body-response {
   font-size: 20px;
   text-align: left;
@@ -1254,13 +1253,15 @@ body {
 
 /* line 57, scss/_theme.scss */
 .timer-div {
-  height: 300px;
-  width: 100%;
+  height: 50vh;
+  width: 50vh;
   margin-left: auto;
   margin-right: auto;
+  min-width: 100px;
+  min-height: 100px;
 }
 
-/* line 64, scss/_theme.scss */
+/* line 66, scss/_theme.scss */
 .theme-timer {
   border: 5px solid #410C54;
   background: #410C54;
@@ -1268,17 +1269,17 @@ body {
   -webkit-animation: size 120s linear;
   animation: size 120s linear;
   position: absolute;
-  top: 140px;
+  top: 50%;
+  margin-top: -25vmin;
   left: 50%;
 }
 
 @keyframes size {
   0% {
-    height: 300px;
-    width: 300px;
+    height: 50vmin;
+    width: 50vmin;
     margin-bottom: 10px;
-    margin-top: 0px;
-    margin-left: -150px;
+    margin-left: -25vmin;
     background: #8ED676;
     border-color: #8ED676;
   }
@@ -1298,118 +1299,126 @@ body {
     height: 0px;
     width: 0px;
     margin-bottom: 160px;
-    margin-top: 150px;
+    margin-top: 0px;
     margin-left: 0px;
     background: black;
     border-color: black;
   }
 }
-/* line 82, scss/_theme.scss */
+/* line 86, scss/_theme.scss */
 .theme-time2 {
-  width: 300px;
-  height: 300px;
+  width: 50vmin;
+  height: 50vmin;
   color: white;
   font-weight: bold;
   left: 50%;
-  margin-left: -150px;
+  margin-left: -25vmin;
   margin-right: auto;
   border: 5px solid white;
   border-radius: 50%;
   position: absolute;
-  top: 140px;
+  top: 50%;
+  margin-top: -25vmin;
   text-align: center;
 }
-/* line 95, scss/_theme.scss */
+/* line 100, scss/_theme.scss */
 .theme-time2 p {
   margin-top: 10px;
 }
 
-/* line 100, scss/_theme.scss */
+/* line 105, scss/_theme.scss */
 .theme-time1 {
-  width: 150px;
-  height: 150px;
+  width: 25vmin;
+  height: 25vmin;
   color: white;
   font-weight: bold;
   left: 50%;
-  margin-left: -75px;
+  margin-left: -12.5vmin;
   margin-right: auto;
   border: 5px solid  white;
   border-radius: 50%;
   position: absolute;
-  top: 215px;
+  top: 50%;
+  margin-top: -12.5vmin;
   text-align: center;
 }
-/* line 113, scss/_theme.scss */
+/* line 119, scss/_theme.scss */
 .theme-time1 p {
   margin-top: 10px;
 }
 
-/* line 118, scss/_theme.scss */
+/* line 124, scss/_theme.scss */
 .theme-time15 {
-  width: 225px;
-  height: 225px;
+  width: 37.5vmin;
+  height: 37.5vmin;
   color: white;
   left: 50%;
-  margin-left: -112.5px;
+  margin-left: -18.75vmin;
   margin-right: auto;
   border: 5px solid white;
   border-radius: 50%;
   position: absolute;
-  top: 177px;
+  top: 50%;
+  margin-top: -18.75vmin;
   text-align: center;
 }
-/* line 130, scss/_theme.scss */
+/* line 137, scss/_theme.scss */
 .theme-time15 p {
   margin-top: 10px;
 }
 
-/* line 135, scss/_theme.scss */
+/* line 142, scss/_theme.scss */
 .theme-time05 {
-  width: 75px;
-  height: 75px;
+  width: 12.5vmin;
+  height: 12.5vmin;
   color: white;
   left: 50%;
-  margin-left: -37.5px;
+  margin-left: -6.25vmin;
   margin-right: auto;
   border: 5px solid  white;
   border-radius: 50%;
   position: absolute;
-  top: 252px;
+  top: 50%;
+  margin-top: -6.25vmin;
   text-align: center;
 }
-/* line 147, scss/_theme.scss */
+/* line 155, scss/_theme.scss */
 .theme-time05 p {
   margin-top: 20px;
 }
 
-/* line 152, scss/_theme.scss */
+/* line 160, scss/_theme.scss */
 .theme-response-inner {
   width: 30%;
   height: 50px;
   background: #8ED676;
 }
 
-/* line 159, scss/_theme.scss */
+/* line 167, scss/_theme.scss */
 .student-question {
   margin-top: 30px;
 }
 
-/* line 163, scss/_theme.scss */
+/* line 171, scss/_theme.scss */
 .student-responses {
   margin-top: 30px;
 }
 
-/* line 168, scss/_theme.scss */
+/* line 176, scss/_theme.scss */
 .theme-response-actions {
-  margin-top: 30px;
+  position: absolute;
+  bottom: 10px;
+  left: 50%;
+  margin-left: -200px;
+  width: 400px;
   text-align: center;
 }
-/* line 172, scss/_theme.scss */
+/* line 184, scss/_theme.scss */
 .theme-response-actions h2 {
   font-size: 30px;
 }
 
-/* line 178, scss/_theme.scss */
+/* line 190, scss/_theme.scss */
 .subject-form {
   padding-top: 12px;
   padding-bottom: 12px;
