--- a/css/scss/_buttons.scss
+++ b/css/scss/_buttons.scss
@@ -226,14 +226,14 @@ input:focus {
 .q-button {
 	@extend .submit;
 	font-size: 12px;
-	color: $uq-green;
-	border:2px solid $uq-green;
+	color: $uq-purple;
+	border:2px solid $uq-purple;
 	width: 60px;
 	margin:1px;
 	&:hover {
-		background: $uq-green;
+		background: $uq-purple;
         color: white;
-		border:2px solid $uq-green;
+		border:2px solid $uq-purple;
         transition: 0.4s;
 	}
 }
@@ -241,12 +241,12 @@ input:focus {
 .q-button-long {
 	@extend .submit;
 	font-size: 12px;
-	border: 2px solid $uq-green;
-	color: $uq-green;
+	border: 2px solid $uq-purple;
+	color: $uq-purple;
 	width: 130px;
 	&:hover {
-        border: 2px solid $uq-green;
-		background: $uq-green;
+        border: 2px solid $uq-purple;
+		background: $uq-purple;
         color: white;
         transition: 0.4s;
 	}
