--- a/css/main.css
+++ b/css/main.css
@@ -1096,7 +1096,7 @@ body {
   text-align: center;
   padding-top: 10px;
   font-weight: 800;
-  font-size: 40px;
+  font-size: 4vmin;
   color: black;
 }
 
