--- a/css/main.css
+++ b/css/main.css
@@ -478,7 +478,7 @@ input:focus {
   padding: 6px 24px;
   text-decoration: none;
   text-shadow: 0px 1px 0px #528009;
-  width: 220px;
+  width: 40%;
   margin-right: 20px;
   outline: none;
 }
@@ -527,7 +527,7 @@ input:focus {
   padding: 6px 24px;
   text-decoration: none;
   text-shadow: 0px 1px 0px #810e05;
-  width: 220px;
+  width: 40%;
   margin-left: 20px;
   outline: none;
 }
@@ -1266,8 +1266,8 @@ body {
   border: 5px solid #410C54;
   background: #410C54;
   border-radius: 50%;
-  -webkit-animation: size 240s linear;
-  animation: size 240s linear;
+  -webkit-animation: size 120s linear;
+  animation: size 120s linear;
   position: absolute;
   top: 50%;
   margin-top: -25vmin;
