--- a/css/scss/_buttons.scss
+++ b/css/scss/_buttons.scss
@@ -315,7 +315,7 @@ input:focus {
     padding:6px 24px;
     text-decoration:none;
     text-shadow:0px 1px 0px #528009;
-    width: 220px;
+    width: 40%;
     margin-right: 20px;
     outline: none;
 }
@@ -360,7 +360,7 @@ input:focus {
     padding:6px 24px;
     text-decoration:none;
     text-shadow:0px 1px 0px #810e05;
-    width: 220px;
+    width: 40%;
     margin-left: 20px;
     outline: none;
 }
