--- a/css/scss/_buttons.scss
+++ b/css/scss/_buttons.scss
@@ -309,7 +309,7 @@ input:focus {
     display:inline-block;
     cursor:pointer;
     color:#ffffff;
-    font-family:Arial;
+    font-family: "open-sans", Arial;
     font-size:15px;
     font-weight:bold;
     padding:6px 24px;
@@ -354,7 +354,7 @@ input:focus {
     display:inline-block;
     cursor:pointer;
     color:#ffffff;
-    font-family:Arial;
+    font-family:"open-sans", Arial;
     font-size:15px;
     font-weight:bold;
     padding:6px 24px;
