--- a/css/main.css
+++ b/css/main.css
@@ -42,42 +42,43 @@ html, body, div, span, applet, object, iframe, h1, h2, h3, h4, h5, h6, p, blockq
   font: inherit;
   vertical-align: baseline;
   text-decoration: none;
+  font-family: "open-sans";
 }
 
 /* HTML5 display-role reset for older browsers */
-/* line 17, scss/_reset.scss */
+/* line 18, scss/_reset.scss */
 article, aside, details, figcaption, figure, footer, header, hgroup, menu, nav, section {
   display: block;
 }
 
-/* line 20, scss/_reset.scss */
+/* line 21, scss/_reset.scss */
 body {
   line-height: 1;
 }
 
-/* line 23, scss/_reset.scss */
+/* line 24, scss/_reset.scss */
 ol, ul {
   list-style: none;
 }
 
-/* line 26, scss/_reset.scss */
+/* line 27, scss/_reset.scss */
 blockquote, q {
   quotes: none;
 }
 
-/* line 30, scss/_reset.scss */
+/* line 31, scss/_reset.scss */
 blockquote:before, blockquote:after {
   content: '';
   content: none;
 }
 
-/* line 35, scss/_reset.scss */
+/* line 36, scss/_reset.scss */
 q:before, q:after {
   content: '';
   content: none;
 }
 
-/* line 39, scss/_reset.scss */
+/* line 40, scss/_reset.scss */
 table {
   border-collapse: collapse;
   border-spacing: 0;
@@ -472,7 +473,7 @@ input:focus {
   display: inline-block;
   cursor: pointer;
   color: #ffffff;
-  font-family: Arial;
+  font-family: "open-sans", Arial;
   font-size: 15px;
   font-weight: bold;
   padding: 6px 24px;
@@ -521,7 +522,7 @@ input:focus {
   display: inline-block;
   cursor: pointer;
   color: #ffffff;
-  font-family: Arial;
+  font-family: "open-sans", Arial;
   font-size: 15px;
   font-weight: bold;
   padding: 6px 24px;
@@ -1062,28 +1063,36 @@ body {
 * *****/
 @font-face {
   font-family: 'open-sans';
-  src: url("../fonts/opensans/OpenSans-Regular.ttf") format("truetype");
+  src: url("../css/fonts/opensans/OpenSans-Regular.ttf") format("truetype");
 }
 @font-face {
   font-family: 'open-sans-semibold';
-  src: url("../fonts/opensans/OpenSans-Semibold.ttf") format("truetype");
+  src: url("../css/fonts/opensans/OpenSans-Semibold.ttf") format("truetype");
 }
 @font-face {
   font-family: 'open-sans-bold';
-  src: url("../fonts/opensans/OpenSans-Regular.ttf") format("truetype");
+  src: url("../css/fonts/opensans/OpenSans-Regular.ttf") format("truetype");
 }
-/* line 32, scss/_typography.scss */
+@font-face {
+  font-family: 'quicksand';
+  src: url("../css/fonts/quicksand/quicksand-regular.ttf") format("truetype");
+}
+@font-face {
+  font-family: 'quicksand-bold';
+  src: url("../css/fonts/quicksand/quicksand-bold.ttf") format("truetype");
+}
+/* line 43, scss/_typography.scss */
 .type-welcome {
   text-align: center;
   padding-bottom: 10px;
 }
 
-/* line 38, scss/_typography.scss */
+/* line 49, scss/_typography.scss */
 .type-welcome span {
   font-weight: 600;
 }
 
-/* line 43, scss/_typography.scss */
+/* line 54, scss/_typography.scss */
 .type-title {
   color: white;
   display: inline-block;
@@ -1091,7 +1100,7 @@ body {
   margin-top: 18px;
 }
 
-/* line 51, scss/_typography.scss */
+/* line 62, scss/_typography.scss */
 .type-body-heading {
   text-align: center;
   padding-top: 10px;
@@ -1100,7 +1109,7 @@ body {
   color: black;
 }
 
-/* line 60, scss/_typography.scss */
+/* line 71, scss/_typography.scss */
 .question-body-heading {
   text-align: center;
   padding-top: 10px;
@@ -1108,7 +1117,7 @@ body {
   color: black;
 }
 
-/* line 68, scss/_typography.scss */
+/* line 79, scss/_typography.scss */
 .type-body-subheading {
   text-align: center;
   padding-top: 10px;
@@ -1116,7 +1125,7 @@ body {
   padding-bottom: 10px;
 }
 
-/* line 77, scss/_typography.scss */
+/* line 88, scss/_typography.scss */
 .startpage-welcome {
   color: white;
   text-align: center;
@@ -1126,18 +1135,18 @@ body {
   font-size: 1em;
 }
 
-/* line 86, scss/_typography.scss */
+/* line 97, scss/_typography.scss */
 .start-section-input {
   opacity: .8;
 }
-/* line 88, scss/_typography.scss */
+/* line 99, scss/_typography.scss */
 .start-section-input h3 {
   text-align: center;
   padding-top: 10px;
   font-weight: 800;
 }
 
-/* line 102, scss/_typography.scss */
+/* line 113, scss/_typography.scss */
 .lecturer-startpage-welcome {
   color: #000;
   text-align: center;
@@ -1147,12 +1156,12 @@ body {
   font-size: 1em;
 }
 
-/* line 111, scss/_typography.scss */
+/* line 122, scss/_typography.scss */
 #lecturer-start-username {
   font-weight: 600;
 }
 
-/* line 116, scss/_typography.scss */
+/* line 127, scss/_typography.scss */
 .type-lecture-mode h2, .type-prepare-mode h2 {
   color: white;
   font-size: 50px;
@@ -1161,22 +1170,23 @@ body {
   padding-top: calc(55vh - 173px);
   margin-bottom: 30px;
 }
-/* line 125, scss/_typography.scss */
+/* line 136, scss/_typography.scss */
 .type-lecture-mode h3, .type-prepare-mode h3 {
   color: white;
   font-weight: 300;
   text-align: center;
 }
 
-/* line 132, scss/_typography.scss */
+/* line 143, scss/_typography.scss */
 .typography-l-h3 {
   color: white;
   display: inline-block;
   margin-left: 20px;
   margin-top: 18px;
+  font-family: "open-sans-semibold", Arial;
 }
 
-/* line 139, scss/_typography.scss */
+/* line 151, scss/_typography.scss */
 .type-body-url {
   font-size: 20px;
   text-align: center;
@@ -1184,7 +1194,7 @@ body {
   margin-top: 10px;
 }
 
-/* line 146, scss/_typography.scss */
+/* line 158, scss/_typography.scss */
 .type-body-response {
   font-size: 20px;
   text-align: left;
