--- a/css/main.css
+++ b/css/main.css
@@ -90,14 +90,16 @@ table {
 #headers-top-bar {
   background: #410C54;
   height: 40px;
+  position: relative;
+  z-index: 3000;
 }
 @media screen and (max-width: 960px) {
-  /* line 15, scss/_headers.scss */
+  /* line 17, scss/_headers.scss */
   #headers-top-bar img {
     display: none;
   }
 }
-/* line 21, scss/_headers.scss */
+/* line 23, scss/_headers.scss */
 #headers-top-bar img {
   width: 100px;
   margin-top: 7px;
@@ -107,18 +109,18 @@ table {
   left: 50%;
   transform: translate(-50%, 0);
 }
-/* line 29, scss/_headers.scss */
+/* line 31, scss/_headers.scss */
 #headers-top-bar #submit {
   height: 40px !important;
 }
 
-/* line 35, scss/_headers.scss */
+/* line 37, scss/_headers.scss */
 .header-l-prepare {
   height: 50px;
   width: 100%;
   background: #410C54;
 }
-/* line 39, scss/_headers.scss */
+/* line 41, scss/_headers.scss */
 .header-l-prepare .headerpos {
   margin-right: auto;
   margin-left: auto;
@@ -127,13 +129,13 @@ table {
   transform: translate(-50%, 0);
 }
 
-/* line 48, scss/_headers.scss */
+/* line 50, scss/_headers.scss */
 .header-l-lecture {
   height: 50px;
   width: 100%;
   background: #8ED676;
 }
-/* line 52, scss/_headers.scss */
+/* line 54, scss/_headers.scss */
 .header-l-lecture .headerpos {
   margin-right: auto;
   margin-left: auto;
@@ -142,7 +144,7 @@ table {
   transform: translate(-50%, 0);
 }
 
-/* line 65, scss/_headers.scss */
+/* line 67, scss/_headers.scss */
 .header-startpage {
   height: 120px;
   width: 100%;
@@ -152,7 +154,7 @@ table {
   box-shadow: 0px 1px 5px #000;
   box-shadow: 0px 1px 5px #000000;
 }
-/* line 73, scss/_headers.scss */
+/* line 75, scss/_headers.scss */
 .header-startpage h3 {
   color: white;
   text-align: center;
@@ -162,13 +164,13 @@ table {
   font-size: 1em;
 }
 @media screen and (max-width: 960px) {
-  /* line 65, scss/_headers.scss */
+  /* line 67, scss/_headers.scss */
   .header-startpage {
     height: 70px;
   }
 }
 
-/* line 91, scss/_headers.scss */
+/* line 93, scss/_headers.scss */
 .lecturer-startpage-header {
   height: 163px;
   width: 100%;
@@ -964,14 +966,16 @@ body:after {
 #headers-top-bar {
   background: #410C54;
   height: 40px;
+  position: relative;
+  z-index: 3000;
 }
 @media screen and (max-width: 960px) {
-  /* line 15, scss/_headers.scss */
+  /* line 17, scss/_headers.scss */
   #headers-top-bar img {
     display: none;
   }
 }
-/* line 21, scss/_headers.scss */
+/* line 23, scss/_headers.scss */
 #headers-top-bar img {
   width: 100px;
   margin-top: 7px;
@@ -981,18 +985,18 @@ body:after {
   left: 50%;
   transform: translate(-50%, 0);
 }
-/* line 29, scss/_headers.scss */
+/* line 31, scss/_headers.scss */
 #headers-top-bar #submit {
   height: 40px !important;
 }
 
-/* line 35, scss/_headers.scss */
+/* line 37, scss/_headers.scss */
 .header-l-prepare {
   height: 50px;
   width: 100%;
   background: #410C54;
 }
-/* line 39, scss/_headers.scss */
+/* line 41, scss/_headers.scss */
 .header-l-prepare .headerpos {
   margin-right: auto;
   margin-left: auto;
@@ -1001,13 +1005,13 @@ body:after {
   transform: translate(-50%, 0);
 }
 
-/* line 48, scss/_headers.scss */
+/* line 50, scss/_headers.scss */
 .header-l-lecture {
   height: 50px;
   width: 100%;
   background: #8ED676;
 }
-/* line 52, scss/_headers.scss */
+/* line 54, scss/_headers.scss */
 .header-l-lecture .headerpos {
   margin-right: auto;
   margin-left: auto;
@@ -1016,7 +1020,7 @@ body:after {
   transform: translate(-50%, 0);
 }
 
-/* line 65, scss/_headers.scss */
+/* line 67, scss/_headers.scss */
 .header-startpage {
   height: 120px;
   width: 100%;
@@ -1026,7 +1030,7 @@ body:after {
   box-shadow: 0px 1px 5px #000;
   box-shadow: 0px 1px 5px #000000;
 }
-/* line 73, scss/_headers.scss */
+/* line 75, scss/_headers.scss */
 .header-startpage h3 {
   color: white;
   text-align: center;
@@ -1036,13 +1040,13 @@ body:after {
   font-size: 1em;
 }
 @media screen and (max-width: 960px) {
-  /* line 65, scss/_headers.scss */
+  /* line 67, scss/_headers.scss */
   .header-startpage {
     height: 70px;
   }
 }
 
-/* line 91, scss/_headers.scss */
+/* line 93, scss/_headers.scss */
 .lecturer-startpage-header {
   height: 163px;
   width: 100%;
@@ -1266,8 +1270,8 @@ body {
   border: 5px solid #410C54;
   background: #410C54;
   border-radius: 50%;
-  -webkit-animation: size 240s linear;
-  animation: size 240s linear;
+  -webkit-animation: size 120s linear;
+  animation: size 120s linear;
   position: absolute;
   top: 50%;
   margin-top: -25vmin;
@@ -1802,7 +1806,7 @@ body {
 #content p {
   position: absolute;
   top: 40%;
-  z-index: 2000;
+  z-index: 1000;
   color: #8ED676;
   text-align: center;
   font-size: 20px;
@@ -1888,7 +1892,7 @@ body {
 }
 
 /* line 175, scss/_updatedCanvas.scss */
-.button-removal, #tools, #camera, #question, #submit {
+.button-removal, #tools, #camera, #insert-into-canvas, #question, #submit {
   outline: 0;
   border: 0;
   background: 0;
@@ -1910,11 +1914,23 @@ body {
 }
 
 /* line 196, scss/_updatedCanvas.scss */
+#insert-into-canvas {
+  background: white;
+  margin: auto;
+  text-align: center;
+}
+
+/* line 203, scss/_updatedCanvas.scss */
 #question {
   position: absolute;
 }
 
-/* line 201, scss/_updatedCanvas.scss */
+/* line 208, scss/_updatedCanvas.scss */
+#question.close {
+  background: red;
+}
+
+/* line 212, scss/_updatedCanvas.scss */
 .input-group {
   display: inline-block;
   width: 50px;
@@ -1922,7 +1938,7 @@ body {
   overflow: hidden;
   position: relative;
 }
-/* line 208, scss/_updatedCanvas.scss */
+/* line 219, scss/_updatedCanvas.scss */
 .input-group input {
   height: 40px;
   opacity: 0;
@@ -1938,7 +1954,7 @@ body {
   margin: 0;
 }
 
-/* line 221, scss/_updatedCanvas.scss */
+/* line 232, scss/_updatedCanvas.scss */
 #submit {
   background: #8ED676;
   height: 100%;
@@ -1949,37 +1965,37 @@ body {
   outline: 0;
   border: none;
 }
-/* line 232, scss/_updatedCanvas.scss */
+/* line 243, scss/_updatedCanvas.scss */
 #submit:focus {
   outline: none;
   border: none;
 }
-/* line 237, scss/_updatedCanvas.scss */
+/* line 248, scss/_updatedCanvas.scss */
 #submit:hover {
   background: #6eca4f;
 }
 
-/* line 241, scss/_updatedCanvas.scss */
+/* line 252, scss/_updatedCanvas.scss */
 *:focus {
   outline: none;
 }
 
 @media screen and (max-width: 960px) {
-  /* line 259, scss/_updatedCanvas.scss */
+  /* line 270, scss/_updatedCanvas.scss */
   .closed {
     transform: translate3d(-100vw, 0, 0);
     -webkit-transform: translate3d(-100vw, 0, 0);
   }
 }
 @media screen and (min-width: 961px) and (max-height: 690px) {
-  /* line 259, scss/_updatedCanvas.scss */
+  /* line 270, scss/_updatedCanvas.scss */
   .closed {
     transform: translate3d(-100vw, 0, 0);
     -webkit-transform: translate3d(-100vw, 0, 0);
   }
 }
 @media screen and (min-width: 961px) and (min-height: 691px) {
-  /* line 259, scss/_updatedCanvas.scss */
+  /* line 270, scss/_updatedCanvas.scss */
   .closed {
     transform: translate3d(-300px, 0, 0);
     -webkit-transform: translate3d(-300px, 0, 0);
@@ -1987,7 +2003,7 @@ body {
 }
 
 @media screen and (max-width: 960px) {
-  /* line 388, scss/_updatedCanvas.scss */
+  /* line 399, scss/_updatedCanvas.scss */
   #tool-bar {
     transition: .3s;
     position: absolute;
@@ -1998,14 +2014,14 @@ body {
     height: 250px;
     float: none;
   }
-  /* line 279, scss/_updatedCanvas.scss */
+  /* line 290, scss/_updatedCanvas.scss */
   #tool-bar .element {
     float: left;
     border-right: 1px solid black;
     height: 100%;
     width: 33%;
   }
-  /* line 285, scss/_updatedCanvas.scss */
+  /* line 296, scss/_updatedCanvas.scss */
   #tool-bar .element h1 {
     color: white;
     text-align: center;
@@ -2014,18 +2030,18 @@ body {
     padding-top: 10px;
     margin-bottom: 20px;
   }
-  /* line 294, scss/_updatedCanvas.scss */
+  /* line 305, scss/_updatedCanvas.scss */
   #tool-bar .element .selected {
     background: black;
   }
-  /* line 298, scss/_updatedCanvas.scss */
+  /* line 309, scss/_updatedCanvas.scss */
   #tool-bar .element .color-selected {
     box-sizing: border-box;
     -moz-box-sizing: border-box;
     -webkit-box-sizing: border-box;
     border: 1px solid white;
   }
-  /* line 306, scss/_updatedCanvas.scss */
+  /* line 317, scss/_updatedCanvas.scss */
   #tool-bar .element div {
     height: 50px;
     width: 50px;
@@ -2035,26 +2051,26 @@ body {
     margin-left: -25px;
     text-align: center;
   }
-  /* line 315, scss/_updatedCanvas.scss */
+  /* line 326, scss/_updatedCanvas.scss */
   #tool-bar .element div i {
     color: white;
     margin-top: 10px;
     font-size: 25px;
   }
-  /* line 321, scss/_updatedCanvas.scss */
+  /* line 332, scss/_updatedCanvas.scss */
   #tool-bar .element div p {
     color: white;
     padding-top: 20px;
     font-size: 15px;
     text-align: center;
   }
-  /* line 331, scss/_updatedCanvas.scss */
+  /* line 342, scss/_updatedCanvas.scss */
   #tool-bar .element:nth-child(3) {
     border-right: none;
   }
 }
 @media screen and (min-width: 961px) and (max-height: 690px) {
-  /* line 388, scss/_updatedCanvas.scss */
+  /* line 399, scss/_updatedCanvas.scss */
   #tool-bar {
     transition: .3s;
     position: absolute;
@@ -2065,14 +2081,14 @@ body {
     height: 250px;
     float: none;
   }
-  /* line 279, scss/_updatedCanvas.scss */
+  /* line 290, scss/_updatedCanvas.scss */
   #tool-bar .element {
     float: left;
     border-right: 1px solid black;
     height: 100%;
     width: 33%;
   }
-  /* line 285, scss/_updatedCanvas.scss */
+  /* line 296, scss/_updatedCanvas.scss */
   #tool-bar .element h1 {
     color: white;
     text-align: center;
@@ -2081,18 +2097,18 @@ body {
     padding-top: 10px;
     margin-bottom: 20px;
   }
-  /* line 294, scss/_updatedCanvas.scss */
+  /* line 305, scss/_updatedCanvas.scss */
   #tool-bar .element .selected {
     background: black;
   }
-  /* line 298, scss/_updatedCanvas.scss */
+  /* line 309, scss/_updatedCanvas.scss */
   #tool-bar .element .color-selected {
     box-sizing: border-box;
     -moz-box-sizing: border-box;
     -webkit-box-sizing: border-box;
     border: 1px solid white;
   }
-  /* line 306, scss/_updatedCanvas.scss */
+  /* line 317, scss/_updatedCanvas.scss */
   #tool-bar .element div {
     height: 50px;
     width: 50px;
@@ -2102,26 +2118,26 @@ body {
     margin-left: -25px;
     text-align: center;
   }
-  /* line 315, scss/_updatedCanvas.scss */
+  /* line 326, scss/_updatedCanvas.scss */
   #tool-bar .element div i {
     color: white;
     margin-top: 10px;
     font-size: 25px;
   }
-  /* line 321, scss/_updatedCanvas.scss */
+  /* line 332, scss/_updatedCanvas.scss */
   #tool-bar .element div p {
     color: white;
     padding-top: 20px;
     font-size: 15px;
     text-align: center;
   }
-  /* line 331, scss/_updatedCanvas.scss */
+  /* line 342, scss/_updatedCanvas.scss */
   #tool-bar .element:nth-child(3) {
     border-right: none;
   }
 }
 @media screen and (min-width: 961px) and (min-height: 691px) {
-  /* line 388, scss/_updatedCanvas.scss */
+  /* line 399, scss/_updatedCanvas.scss */
   #tool-bar {
     transition: .3s;
     position: absolute;
@@ -2131,11 +2147,11 @@ body {
     width: 80px;
     height: 100%;
   }
-  /* line 337, scss/_updatedCanvas.scss */
+  /* line 348, scss/_updatedCanvas.scss */
   #tool-bar .element {
     display: block;
   }
-  /* line 340, scss/_updatedCanvas.scss */
+  /* line 351, scss/_updatedCanvas.scss */
   #tool-bar .element h1 {
     color: white;
     text-align: center;
@@ -2147,18 +2163,18 @@ body {
     padding-bottom: 10px;
     margin-top: 10px;
   }
-  /* line 352, scss/_updatedCanvas.scss */
+  /* line 363, scss/_updatedCanvas.scss */
   #tool-bar .element .selected {
     background: black;
   }
-  /* line 356, scss/_updatedCanvas.scss */
+  /* line 367, scss/_updatedCanvas.scss */
   #tool-bar .element .color-selected {
     box-sizing: border-box;
     -moz-box-sizing: border-box;
     -webkit-box-sizing: border-box;
     border: 1px solid white;
   }
-  /* line 364, scss/_updatedCanvas.scss */
+  /* line 375, scss/_updatedCanvas.scss */
   #tool-bar .element div {
     height: 50px;
     width: 50px;
@@ -2167,13 +2183,13 @@ body {
     margin-left: -25px;
     text-align: center;
   }
-  /* line 372, scss/_updatedCanvas.scss */
+  /* line 383, scss/_updatedCanvas.scss */
   #tool-bar .element div i {
     color: white;
     margin-top: 10px;
     font-size: 25px;
   }
-  /* line 378, scss/_updatedCanvas.scss */
+  /* line 389, scss/_updatedCanvas.scss */
   #tool-bar .element div p {
     color: white;
     padding-top: 20px;
@@ -2182,37 +2198,37 @@ body {
   }
 }
 
-/* line 424, scss/_updatedCanvas.scss */
+/* line 435, scss/_updatedCanvas.scss */
 #color-blue {
   background-color: blue;
 }
 
-/* line 428, scss/_updatedCanvas.scss */
+/* line 439, scss/_updatedCanvas.scss */
 #color-red {
   background-color: red;
 }
 
-/* line 431, scss/_updatedCanvas.scss */
+/* line 442, scss/_updatedCanvas.scss */
 #color-green {
   background-color: green;
 }
 
-/* line 437, scss/_updatedCanvas.scss */
+/* line 448, scss/_updatedCanvas.scss */
 .circle-small {
   margin-top: 20px !important;
 }
 
-/* line 441, scss/_updatedCanvas.scss */
+/* line 452, scss/_updatedCanvas.scss */
 .circle-medium {
   margin-top: 15px !important;
 }
 
-/* line 445, scss/_updatedCanvas.scss */
+/* line 456, scss/_updatedCanvas.scss */
 .circle-large {
   margin-top: 10px !important;
 }
 
-/* line 453, scss/_updatedCanvas.scss */
+/* line 464, scss/_updatedCanvas.scss */
 .loading {
   position: absolute;
   z-index: 10000;
@@ -2250,17 +2266,18 @@ body {
 /* Floating part
 
 */
-/* line 486, scss/_updatedCanvas.scss */
+/* line 497, scss/_updatedCanvas.scss */
 #question-container {
   -webkit-transform: translate3d(0, 0, 0);
   position: absolute;
-  z-index: 1990;
-  height: 250px;
+  z-index: 2000;
+  margin: 0 auto;
   background: #410C54;
   width: 100%;
   transition: .3s ease-in-out;
+  margin: auto;
 }
-/* line 494, scss/_updatedCanvas.scss */
+/* line 506, scss/_updatedCanvas.scss */
 #question-container h1 {
   color: white;
   font-size: 40px;
@@ -2268,7 +2285,15 @@ body {
   text-align: center;
   padding-top: 20px;
 }
-/* line 501, scss/_updatedCanvas.scss */
+/* line 514, scss/_updatedCanvas.scss */
+#question-container button {
+  max-width: 80%;
+  margin: auto;
+  display: block;
+  margin-bottom: 10px;
+  color: #410C54;
+}
+/* line 521, scss/_updatedCanvas.scss */
 #question-container h2 {
   color: white;
   font-size: 20px;
@@ -2278,10 +2303,53 @@ body {
   width: 80%;
   margin: auto;
 }
+@media screen and (max-width: 960px) {
+  /* line 497, scss/_updatedCanvas.scss */
+  #question-container {
+    height: 100vh;
+  }
+}
+@media screen and (min-width: 961px) and (max-height: 690px) {
+  /* line 497, scss/_updatedCanvas.scss */
+  #question-container {
+    height: 100vh;
+  }
+}
+@media screen and (min-width: 961px) and (min-height: 691px) {
+  /* line 497, scss/_updatedCanvas.scss */
+  #question-container {
+    height: 100%;
+  }
+}
+/* line 544, scss/_updatedCanvas.scss */
+#question-container img {
+  max-width: 80%;
+  margin: auto;
+  display: block;
+}
 
-/* line 512, scss/_updatedCanvas.scss */
-#question-container.closed {
-  -webkit-transform: translate3d(0, -290px, 0);
+@media screen and (max-width: 960px) {
+  /* line 551, scss/_updatedCanvas.scss */
+  #question-container.closed {
+    -webkit-transform: translate3d(0, -120vh, 0);
+  }
+}
+@media screen and (min-width: 961px) and (max-height: 690px) {
+  /* line 551, scss/_updatedCanvas.scss */
+  #question-container.closed {
+    -webkit-transform: translate3d(0, -120vh, 0);
+  }
+}
+@media screen and (min-width: 961px) and (min-height: 691px) {
+  /* line 551, scss/_updatedCanvas.scss */
+  #question-container.closed {
+    -webkit-transform: translate3d(0, -100%, 0);
+  }
+}
+
+/* line 566, scss/_updatedCanvas.scss */
+#starting-text {
+  color: black;
 }
 
 /* line 1, scss/_hamburger.scss */
