--- a/css/scss/_updatedCanvas.scss
+++ b/css/scss/_updatedCanvas.scss
@@ -105,7 +105,7 @@
     p {
     	position: absolute;
     	top: 40%;
-    	z-index: 2000;
+    	z-index: 1000;
     	color: $uq-green;
     	text-align: center;
     	font-size: 20px;
@@ -193,9 +193,20 @@
 	position: absolute;
 }
 
+#insert-into-canvas {
+    @extend .button-removal;
+    background: white;
+    margin: auto;
+    text-align: center;    
+}
+
 #question {
     @extend .button-removal;
     position: absolute;
+}
+
+#question.close {
+    background: red;
 }
 
 .input-group {
@@ -486,17 +497,26 @@ $break-h-small-a: 691px;
 #question-container {
     -webkit-transform: translate3d(0, 0, 0);
     position: absolute;
-    z-index: 1990;
-    height: 250px;
+    z-index: 2000;
+    margin: 0 auto;
     background: $uq-purple;
     width: 100%;
     transition: .3s ease-in-out;
+
     h1 {
         color: white;
         font-size: 40px;
         font-weight: 500;
         text-align: center;
         padding-top: 20px;
+    }
+
+    button {
+        max-width: 80%;
+        margin: auto;
+        display: block;
+        margin-bottom: 10px;
+        color: $uq-purple;
     }
     h2 {
         color: white;
@@ -507,11 +527,43 @@ $break-h-small-a: 691px;
         width: 80%;
         margin: auto;
     }
+
+    @media screen and (max-width: $break-small) {
+        height: 100vh;
+    }
+
+    @media screen and (min-width: $break-small-a) and (max-height: $break-h-small) {
+        height: 100vh;    
+    }
+
+    @media screen and (min-width: $break-small-a) and (min-height: $break-h-small-a) {
+        height: 100%;
+    }
+    margin: auto;
+
+    img {
+        max-width: 80%;
+        margin: auto;
+        display: block;
+    }
 }
 
 #question-container.closed {
-    -webkit-transform: translate3d(0, -290px, 0);
+
+    @media screen and (max-width: $break-small) {
+        -webkit-transform: translate3d(0, -120vh, 0);
+    }
+
+    @media screen and (min-width: $break-small-a) and (max-height: $break-h-small) {
+        -webkit-transform: translate3d(0, -120vh, 0);
+    }
+
+    @media screen and (min-width: $break-small-a) and (min-height: $break-h-small-a) {
+        -webkit-transform: translate3d(0, -100%, 0);
+    }
 }
 
-
+#starting-text {
+    color: black;
+}
 
