--- a/css/main.css
+++ b/css/main.css
@@ -11,7 +11,7 @@
 /* *************************
   MIXINS 
 ************************* */
-/* line 40, scss/main.scss */
+/* line 38, scss/main.scss */
 .noselect, .list-subjects li, .list-subjects-purple li, .list-subjects-green li, .list-questions-green li, .list-questions li, .list-make-green li, .list-questions-purple li, .student-list li {
   -webkit-touch-callout: none;
   -webkit-user-select: none;
@@ -21,7 +21,7 @@
   user-select: none;
 }
 
-/* line 49, scss/main.scss */
+/* line 47, scss/main.scss */
 .width100 {
   width: 100%;
 }
@@ -1921,26 +1921,47 @@ body {
 /* line 191, scss/_updatedCanvas.scss */
 #camera {
   position: absolute;
+  cursor: pointer;
+}
+/* line 194, scss/_updatedCanvas.scss */
+#camera:hover {
+  background: #1e0627;
 }
 
-/* line 196, scss/_updatedCanvas.scss */
+/* line 200, scss/_updatedCanvas.scss */
 #insert-into-canvas {
   background: white;
   margin: auto;
   text-align: center;
 }
 
-/* line 203, scss/_updatedCanvas.scss */
+/* line 207, scss/_updatedCanvas.scss */
 #question {
+  height: 100%;
+  top: 0px;
   position: absolute;
+  padding: 0;
+  width: 100px;
+  transition: .3s;
+  outline: 0;
+  border: none;
+}
+/* line 218, scss/_updatedCanvas.scss */
+#question:focus {
+  outline: none;
+  border: none;
+}
+/* line 223, scss/_updatedCanvas.scss */
+#question:hover {
+  background: #1e0627;
 }
 
-/* line 208, scss/_updatedCanvas.scss */
+/* line 228, scss/_updatedCanvas.scss */
 #question.close {
   background: red;
 }
 
-/* line 212, scss/_updatedCanvas.scss */
+/* line 232, scss/_updatedCanvas.scss */
 .input-group {
   display: inline-block;
   width: 50px;
@@ -1948,7 +1969,7 @@ body {
   overflow: hidden;
   position: relative;
 }
-/* line 219, scss/_updatedCanvas.scss */
+/* line 239, scss/_updatedCanvas.scss */
 .input-group input {
   height: 40px;
   opacity: 0;
@@ -1964,7 +1985,7 @@ body {
   margin: 0;
 }
 
-/* line 232, scss/_updatedCanvas.scss */
+/* line 252, scss/_updatedCanvas.scss */
 #submit {
   background: #8ED676;
   height: 100%;
@@ -1975,37 +1996,37 @@ body {
   outline: 0;
   border: none;
 }
-/* line 243, scss/_updatedCanvas.scss */
+/* line 263, scss/_updatedCanvas.scss */
 #submit:focus {
   outline: none;
   border: none;
 }
-/* line 248, scss/_updatedCanvas.scss */
+/* line 268, scss/_updatedCanvas.scss */
 #submit:hover {
   background: #6eca4f;
 }
 
-/* line 252, scss/_updatedCanvas.scss */
+/* line 272, scss/_updatedCanvas.scss */
 *:focus {
   outline: none;
 }
 
 @media screen and (max-width: 960px) {
-  /* line 270, scss/_updatedCanvas.scss */
+  /* line 290, scss/_updatedCanvas.scss */
   .closed {
     transform: translate3d(-100vw, 0, 0);
     -webkit-transform: translate3d(-100vw, 0, 0);
   }
 }
 @media screen and (min-width: 961px) and (max-height: 690px) {
-  /* line 270, scss/_updatedCanvas.scss */
+  /* line 290, scss/_updatedCanvas.scss */
   .closed {
     transform: translate3d(-100vw, 0, 0);
     -webkit-transform: translate3d(-100vw, 0, 0);
   }
 }
 @media screen and (min-width: 961px) and (min-height: 691px) {
-  /* line 270, scss/_updatedCanvas.scss */
+  /* line 290, scss/_updatedCanvas.scss */
   .closed {
     transform: translate3d(-300px, 0, 0);
     -webkit-transform: translate3d(-300px, 0, 0);
@@ -2013,7 +2034,7 @@ body {
 }
 
 @media screen and (max-width: 960px) {
-  /* line 399, scss/_updatedCanvas.scss */
+  /* line 424, scss/_updatedCanvas.scss */
   #tool-bar {
     transition: .3s;
     position: absolute;
@@ -2024,14 +2045,14 @@ body {
     height: 250px;
     float: none;
   }
-  /* line 290, scss/_updatedCanvas.scss */
+  /* line 310, scss/_updatedCanvas.scss */
   #tool-bar .element {
     float: left;
     border-right: 1px solid black;
     height: 100%;
     width: 33%;
   }
-  /* line 296, scss/_updatedCanvas.scss */
+  /* line 317, scss/_updatedCanvas.scss */
   #tool-bar .element h1 {
     color: white;
     text-align: center;
@@ -2040,18 +2061,18 @@ body {
     padding-top: 10px;
     margin-bottom: 20px;
   }
-  /* line 305, scss/_updatedCanvas.scss */
+  /* line 326, scss/_updatedCanvas.scss */
   #tool-bar .element .selected {
     background: black;
   }
-  /* line 309, scss/_updatedCanvas.scss */
+  /* line 330, scss/_updatedCanvas.scss */
   #tool-bar .element .color-selected {
     box-sizing: border-box;
     -moz-box-sizing: border-box;
     -webkit-box-sizing: border-box;
     border: 1px solid white;
   }
-  /* line 317, scss/_updatedCanvas.scss */
+  /* line 338, scss/_updatedCanvas.scss */
   #tool-bar .element div {
     height: 50px;
     width: 50px;
@@ -2061,26 +2082,28 @@ body {
     margin-left: -25px;
     text-align: center;
   }
-  /* line 326, scss/_updatedCanvas.scss */
+  /* line 347, scss/_updatedCanvas.scss */
   #tool-bar .element div i {
+    cursor: pointer;
     color: white;
     margin-top: 10px;
     font-size: 25px;
   }
-  /* line 332, scss/_updatedCanvas.scss */
+  /* line 354, scss/_updatedCanvas.scss */
   #tool-bar .element div p {
+    cursor: pointer;
     color: white;
     padding-top: 20px;
     font-size: 15px;
     text-align: center;
   }
-  /* line 342, scss/_updatedCanvas.scss */
+  /* line 365, scss/_updatedCanvas.scss */
   #tool-bar .element:nth-child(3) {
     border-right: none;
   }
 }
 @media screen and (min-width: 961px) and (max-height: 690px) {
-  /* line 399, scss/_updatedCanvas.scss */
+  /* line 424, scss/_updatedCanvas.scss */
   #tool-bar {
     transition: .3s;
     position: absolute;
@@ -2091,14 +2114,14 @@ body {
     height: 250px;
     float: none;
   }
-  /* line 290, scss/_updatedCanvas.scss */
+  /* line 310, scss/_updatedCanvas.scss */
   #tool-bar .element {
     float: left;
     border-right: 1px solid black;
     height: 100%;
     width: 33%;
   }
-  /* line 296, scss/_updatedCanvas.scss */
+  /* line 317, scss/_updatedCanvas.scss */
   #tool-bar .element h1 {
     color: white;
     text-align: center;
@@ -2107,18 +2130,18 @@ body {
     padding-top: 10px;
     margin-bottom: 20px;
   }
-  /* line 305, scss/_updatedCanvas.scss */
+  /* line 326, scss/_updatedCanvas.scss */
   #tool-bar .element .selected {
     background: black;
   }
-  /* line 309, scss/_updatedCanvas.scss */
+  /* line 330, scss/_updatedCanvas.scss */
   #tool-bar .element .color-selected {
     box-sizing: border-box;
     -moz-box-sizing: border-box;
     -webkit-box-sizing: border-box;
     border: 1px solid white;
   }
-  /* line 317, scss/_updatedCanvas.scss */
+  /* line 338, scss/_updatedCanvas.scss */
   #tool-bar .element div {
     height: 50px;
     width: 50px;
@@ -2128,26 +2151,28 @@ body {
     margin-left: -25px;
     text-align: center;
   }
-  /* line 326, scss/_updatedCanvas.scss */
+  /* line 347, scss/_updatedCanvas.scss */
   #tool-bar .element div i {
+    cursor: pointer;
     color: white;
     margin-top: 10px;
     font-size: 25px;
   }
-  /* line 332, scss/_updatedCanvas.scss */
+  /* line 354, scss/_updatedCanvas.scss */
   #tool-bar .element div p {
+    cursor: pointer;
     color: white;
     padding-top: 20px;
     font-size: 15px;
     text-align: center;
   }
-  /* line 342, scss/_updatedCanvas.scss */
+  /* line 365, scss/_updatedCanvas.scss */
   #tool-bar .element:nth-child(3) {
     border-right: none;
   }
 }
 @media screen and (min-width: 961px) and (min-height: 691px) {
-  /* line 399, scss/_updatedCanvas.scss */
+  /* line 424, scss/_updatedCanvas.scss */
   #tool-bar {
     transition: .3s;
     position: absolute;
@@ -2157,11 +2182,11 @@ body {
     width: 80px;
     height: 100%;
   }
-  /* line 348, scss/_updatedCanvas.scss */
+  /* line 371, scss/_updatedCanvas.scss */
   #tool-bar .element {
     display: block;
   }
-  /* line 351, scss/_updatedCanvas.scss */
+  /* line 374, scss/_updatedCanvas.scss */
   #tool-bar .element h1 {
     color: white;
     text-align: center;
@@ -2173,18 +2198,18 @@ body {
     padding-bottom: 10px;
     margin-top: 10px;
   }
-  /* line 363, scss/_updatedCanvas.scss */
+  /* line 386, scss/_updatedCanvas.scss */
   #tool-bar .element .selected {
     background: black;
   }
-  /* line 367, scss/_updatedCanvas.scss */
+  /* line 390, scss/_updatedCanvas.scss */
   #tool-bar .element .color-selected {
     box-sizing: border-box;
     -moz-box-sizing: border-box;
     -webkit-box-sizing: border-box;
     border: 1px solid white;
   }
-  /* line 375, scss/_updatedCanvas.scss */
+  /* line 398, scss/_updatedCanvas.scss */
   #tool-bar .element div {
     height: 50px;
     width: 50px;
@@ -2193,13 +2218,13 @@ body {
     margin-left: -25px;
     text-align: center;
   }
-  /* line 383, scss/_updatedCanvas.scss */
+  /* line 407, scss/_updatedCanvas.scss */
   #tool-bar .element div i {
     color: white;
     margin-top: 10px;
     font-size: 25px;
   }
-  /* line 389, scss/_updatedCanvas.scss */
+  /* line 413, scss/_updatedCanvas.scss */
   #tool-bar .element div p {
     color: white;
     padding-top: 20px;
@@ -2208,37 +2233,37 @@ body {
   }
 }
 
-/* line 435, scss/_updatedCanvas.scss */
+/* line 460, scss/_updatedCanvas.scss */
 #color-blue {
   background-color: blue;
 }
 
-/* line 439, scss/_updatedCanvas.scss */
+/* line 464, scss/_updatedCanvas.scss */
 #color-red {
   background-color: red;
 }
 
-/* line 442, scss/_updatedCanvas.scss */
+/* line 467, scss/_updatedCanvas.scss */
 #color-green {
   background-color: green;
 }
 
-/* line 448, scss/_updatedCanvas.scss */
+/* line 473, scss/_updatedCanvas.scss */
 .circle-small {
   margin-top: 20px !important;
 }
 
-/* line 452, scss/_updatedCanvas.scss */
+/* line 477, scss/_updatedCanvas.scss */
 .circle-medium {
   margin-top: 15px !important;
 }
 
-/* line 456, scss/_updatedCanvas.scss */
+/* line 481, scss/_updatedCanvas.scss */
 .circle-large {
   margin-top: 10px !important;
 }
 
-/* line 464, scss/_updatedCanvas.scss */
+/* line 489, scss/_updatedCanvas.scss */
 .loading {
   position: absolute;
   z-index: 10000;
@@ -2276,7 +2301,7 @@ body {
 /* Floating part
 
 */
-/* line 497, scss/_updatedCanvas.scss */
+/* line 522, scss/_updatedCanvas.scss */
 #question-container {
   -webkit-transform: translate3d(0, 0, 0);
   position: absolute;
@@ -2287,7 +2312,7 @@ body {
   transition: .3s ease-in-out;
   margin: auto;
 }
-/* line 506, scss/_updatedCanvas.scss */
+/* line 531, scss/_updatedCanvas.scss */
 #question-container h1 {
   color: white;
   font-size: 40px;
@@ -2295,15 +2320,16 @@ body {
   text-align: center;
   padding-top: 20px;
 }
-/* line 514, scss/_updatedCanvas.scss */
+/* line 539, scss/_updatedCanvas.scss */
 #question-container button {
   max-width: 80%;
   margin: auto;
   display: block;
   margin-bottom: 10px;
-  color: #410C54;
+  color: white;
+  background: #8ED676;
 }
-/* line 521, scss/_updatedCanvas.scss */
+/* line 547, scss/_updatedCanvas.scss */
 #question-container h2 {
   color: white;
   font-size: 20px;
@@ -2314,50 +2340,51 @@ body {
   margin: auto;
 }
 @media screen and (max-width: 960px) {
-  /* line 497, scss/_updatedCanvas.scss */
+  /* line 522, scss/_updatedCanvas.scss */
   #question-container {
     height: 100vh;
   }
 }
 @media screen and (min-width: 961px) and (max-height: 690px) {
-  /* line 497, scss/_updatedCanvas.scss */
+  /* line 522, scss/_updatedCanvas.scss */
   #question-container {
     height: 100vh;
   }
 }
 @media screen and (min-width: 961px) and (min-height: 691px) {
-  /* line 497, scss/_updatedCanvas.scss */
+  /* line 522, scss/_updatedCanvas.scss */
   #question-container {
     height: 100%;
   }
 }
-/* line 544, scss/_updatedCanvas.scss */
+/* line 570, scss/_updatedCanvas.scss */
 #question-container img {
   max-width: 80%;
   margin: auto;
+  border: 1px solid white;
   display: block;
 }
 
 @media screen and (max-width: 960px) {
-  /* line 551, scss/_updatedCanvas.scss */
+  /* line 578, scss/_updatedCanvas.scss */
   #question-container.closed {
     -webkit-transform: translate3d(0, -120vh, 0);
   }
 }
 @media screen and (min-width: 961px) and (max-height: 690px) {
-  /* line 551, scss/_updatedCanvas.scss */
+  /* line 578, scss/_updatedCanvas.scss */
   #question-container.closed {
     -webkit-transform: translate3d(0, -120vh, 0);
   }
 }
 @media screen and (min-width: 961px) and (min-height: 691px) {
-  /* line 551, scss/_updatedCanvas.scss */
+  /* line 578, scss/_updatedCanvas.scss */
   #question-container.closed {
     -webkit-transform: translate3d(0, -100%, 0);
   }
 }
 
-/* line 566, scss/_updatedCanvas.scss */
+/* line 593, scss/_updatedCanvas.scss */
 #starting-text {
   color: black;
 }
