--- a/css/scss/_theme.scss
+++ b/css/scss/_theme.scss
@@ -3,7 +3,7 @@
 ** ******/
 
 .theme-lecture-mode {
-	background-image: url(../assets/images/trialbgl.png);
+	background: url(../assets/images/trialbl.png) center;
 	background-repeat: no-repeat;
     background-size: cover;
 	height: calc(100vh - 163px);
@@ -22,7 +22,7 @@ a {
 }
 
 .theme-prepare-mode {
-	background-image: url(../assets/images/trialbgp.png);
+	background: url(../assets/images/trialbp.png)center;
 	background-repeat: no-repeat;
     background-size: cover;
 	height: calc(100vh - 163px);
