--- a/css/main.css
+++ b/css/main.css
@@ -1158,17 +1158,21 @@ body {
   font-size: 50px;
   text-align: center;
   font-weight: 500;
-  padding-top: calc(55vh - 173px);
+  padding-top: 10px;
   margin-bottom: 30px;
 }
 /* line 125, scss/_typography.scss */
-.type-lecture-mode h3, .type-prepare-mode h3 {
-  color: white;
-  font-weight: 300;
-  text-align: center;
+.type-lecture-mode .prepare-use, .type-prepare-mode .prepare-use {
+  position: absolute;
+  left: 50%;
+  bottom: 10px;
+}
+/* line 130, scss/_typography.scss */
+.type-lecture-mode img, .type-prepare-mode img {
+  width: 25%;
 }
 
-/* line 132, scss/_typography.scss */
+/* line 135, scss/_typography.scss */
 .typography-l-h3 {
   color: white;
   display: inline-block;
@@ -1176,7 +1180,7 @@ body {
   margin-top: 18px;
 }
 
-/* line 139, scss/_typography.scss */
+/* line 142, scss/_typography.scss */
 .type-body-url {
   font-size: 20px;
   text-align: center;
@@ -1184,7 +1188,7 @@ body {
   margin-top: 10px;
 }
 
-/* line 146, scss/_typography.scss */
+/* line 149, scss/_typography.scss */
 .type-body-response {
   font-size: 20px;
   text-align: left;
@@ -1198,7 +1202,7 @@ body {
 ** ******/
 /* line 5, scss/_theme.scss */
 .theme-lecture-mode {
-  background-image: url(../assets/images/trialbgl.png);
+  background: url(../assets/images/trialbl.png) center;
   background-repeat: no-repeat;
   background-size: cover;
   height: calc(100vh - 163px);
@@ -1217,7 +1221,7 @@ body {
 
 /* line 24, scss/_theme.scss */
 .theme-prepare-mode {
-  background-image: url(../assets/images/trialbgp.png);
+  background: url(../assets/images/trialbp.png) center;
   background-repeat: no-repeat;
   background-size: cover;
   height: calc(100vh - 163px);
@@ -1266,8 +1270,8 @@ body {
   border: 5px solid #410C54;
   background: #410C54;
   border-radius: 50%;
-  -webkit-animation: size 240s linear;
-  animation: size 240s linear;
+  -webkit-animation: size 120s linear;
+  animation: size 120s linear;
   position: absolute;
   top: 50%;
   margin-top: -25vmin;
