--- a/css/main.css
+++ b/css/main.css
@@ -2374,22 +2374,22 @@ body {
   display: inline-block;
 }
 
-/* line 547, scss/_updatedCanvas.scss */
+/* line 543, scss/_updatedCanvas.scss */
 .circle-small {
   margin-top: 20px !important;
 }
 
-/* line 551, scss/_updatedCanvas.scss */
+/* line 547, scss/_updatedCanvas.scss */
 .circle-medium {
   margin-top: 15px !important;
 }
 
-/* line 555, scss/_updatedCanvas.scss */
+/* line 551, scss/_updatedCanvas.scss */
 .circle-large {
   margin-top: 10px !important;
 }
 
-/* line 563, scss/_updatedCanvas.scss */
+/* line 559, scss/_updatedCanvas.scss */
 .loading {
   position: absolute;
   z-index: 10000;
@@ -2427,7 +2427,7 @@ body {
 /* Floating part
 
 */
-/* line 596, scss/_updatedCanvas.scss */
+/* line 592, scss/_updatedCanvas.scss */
 #question-container {
   -webkit-transform: translate3d(0, 0, 0);
   position: absolute;
@@ -2438,7 +2438,7 @@ body {
   transition: .3s ease-in-out;
   margin: auto;
 }
-/* line 605, scss/_updatedCanvas.scss */
+/* line 601, scss/_updatedCanvas.scss */
 #question-container h1 {
   color: white;
   font-size: 40px;
@@ -2446,7 +2446,7 @@ body {
   text-align: center;
   padding-top: 20px;
 }
-/* line 613, scss/_updatedCanvas.scss */
+/* line 609, scss/_updatedCanvas.scss */
 #question-container button {
   max-width: 80%;
   margin: auto;
@@ -2455,7 +2455,7 @@ body {
   color: white;
   background: #8ED676;
 }
-/* line 621, scss/_updatedCanvas.scss */
+/* line 617, scss/_updatedCanvas.scss */
 #question-container h2 {
   color: white;
   font-size: 20px;
@@ -2466,24 +2466,24 @@ body {
   margin: auto;
 }
 @media screen and (max-width: 960px) {
-  /* line 596, scss/_updatedCanvas.scss */
+  /* line 592, scss/_updatedCanvas.scss */
   #question-container {
     height: 100vh;
   }
 }
 @media screen and (min-width: 961px) and (max-height: 690px) {
-  /* line 596, scss/_updatedCanvas.scss */
+  /* line 592, scss/_updatedCanvas.scss */
   #question-container {
     height: 100vh;
   }
 }
 @media screen and (min-width: 961px) and (min-height: 691px) {
-  /* line 596, scss/_updatedCanvas.scss */
+  /* line 592, scss/_updatedCanvas.scss */
   #question-container {
     height: 100%;
   }
 }
-/* line 644, scss/_updatedCanvas.scss */
+/* line 640, scss/_updatedCanvas.scss */
 #question-container img {
   max-width: 80%;
   margin: auto;
@@ -2492,25 +2492,28 @@ body {
 }
 
 @media screen and (max-width: 960px) {
-  /* line 652, scss/_updatedCanvas.scss */
+  /* line 648, scss/_updatedCanvas.scss */
   #question-container.closed {
+    transform: translate3d(0, -120vh, 0);
     -webkit-transform: translate3d(0, -120vh, 0);
   }
 }
 @media screen and (min-width: 961px) and (max-height: 690px) {
-  /* line 652, scss/_updatedCanvas.scss */
+  /* line 648, scss/_updatedCanvas.scss */
   #question-container.closed {
+    transform: translate3d(0, -120vh, 0);
     -webkit-transform: translate3d(0, -120vh, 0);
   }
 }
 @media screen and (min-width: 961px) and (min-height: 691px) {
-  /* line 652, scss/_updatedCanvas.scss */
+  /* line 648, scss/_updatedCanvas.scss */
   #question-container.closed {
+    transform: translate3d(0, -100%, 0);
     -webkit-transform: translate3d(0, -100%, 0);
   }
 }
 
-/* line 667, scss/_updatedCanvas.scss */
+/* line 666, scss/_updatedCanvas.scss */
 #starting-text {
   color: black;
 }
