--- a/css/main.css
+++ b/css/main.css
@@ -2429,6 +2429,7 @@ body {
 */
 /* line 592, scss/_updatedCanvas.scss */
 #question-container {
+  overflow: hidden;
   -webkit-transform: translate3d(0, 0, 0);
   position: absolute;
   z-index: 2000;
@@ -2438,7 +2439,7 @@ body {
   transition: .3s ease-in-out;
   margin: auto;
 }
-/* line 601, scss/_updatedCanvas.scss */
+/* line 602, scss/_updatedCanvas.scss */
 #question-container h1 {
   color: white;
   font-size: 40px;
@@ -2446,7 +2447,7 @@ body {
   text-align: center;
   padding-top: 20px;
 }
-/* line 609, scss/_updatedCanvas.scss */
+/* line 610, scss/_updatedCanvas.scss */
 #question-container button {
   max-width: 80%;
   margin: auto;
@@ -2455,7 +2456,7 @@ body {
   color: white;
   background: #8ED676;
 }
-/* line 617, scss/_updatedCanvas.scss */
+/* line 618, scss/_updatedCanvas.scss */
 #question-container h2 {
   color: white;
   font-size: 20px;
@@ -2480,40 +2481,41 @@ body {
 @media screen and (min-width: 961px) and (min-height: 691px) {
   /* line 592, scss/_updatedCanvas.scss */
   #question-container {
-    height: 100%;
+    height: 100vh;
   }
 }
-/* line 640, scss/_updatedCanvas.scss */
+/* line 641, scss/_updatedCanvas.scss */
 #question-container img {
-  max-width: 80%;
+  max-width: 50%;
+  max-height: 50%;
   margin: auto;
   border: 1px solid white;
   display: block;
 }
 
 @media screen and (max-width: 960px) {
-  /* line 648, scss/_updatedCanvas.scss */
+  /* line 650, scss/_updatedCanvas.scss */
   #question-container.closed {
     transform: translate3d(0, -120vh, 0);
     -webkit-transform: translate3d(0, -120vh, 0);
   }
 }
 @media screen and (min-width: 961px) and (max-height: 690px) {
-  /* line 648, scss/_updatedCanvas.scss */
+  /* line 650, scss/_updatedCanvas.scss */
   #question-container.closed {
     transform: translate3d(0, -120vh, 0);
     -webkit-transform: translate3d(0, -120vh, 0);
   }
 }
 @media screen and (min-width: 961px) and (min-height: 691px) {
-  /* line 648, scss/_updatedCanvas.scss */
+  /* line 650, scss/_updatedCanvas.scss */
   #question-container.closed {
     transform: translate3d(0, -100%, 0);
     -webkit-transform: translate3d(0, -100%, 0);
   }
 }
 
-/* line 666, scss/_updatedCanvas.scss */
+/* line 668, scss/_updatedCanvas.scss */
 #starting-text {
   color: black;
 }
